--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.application.name=amazonemployee
 #server run
 server.port=8080
 
-#Database=Connection_Details-
-#Database-Mysql Schema-table--amazon_company---employee---and more....
+#PaginationHints=Connection_Details-
+#PaginationHints-Mysql Schema-table--amazon_company---employee---and more....
 spring.datasource.url=jdbc:mysql://localhost:3306/amazon_company
 spring.datasource.username=root
 spring.datasource.password=Tanuja123
