--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,10 @@ spring.jpa.show-sql=true
 #This is important for run program override.
 spring.main.allow-bean-definition-overriding=true 
 
+
+#Basic spring security
+#Need this dependency for Basic and advance spring security
+
+spring.security.user.name=kamal
+spring.scurity.user.password=Tanuja@123
+
